--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  url_launcher: ^6.0.20
+  font_awesome_flutter: ^9.2.0
+  curved_navigation_bar: ^1.0.3
+  flutter_svg: ^1.0.3
+  simple_animations: ^4.0.1
+  focused_menu: ^1.0.5
   
   
 
@@ -65,6 +71,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assests/image/
+  
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
