--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,10 @@ dependencies:
   flutter_svg: ^1.0.3
   simple_animations: ^4.0.1
   focused_menu: ^1.0.5
+  gsheets: ^0.3.2
+  firebase_core: ^1.13.1
+  firebase_auth: ^3.3.10
+  cloud_firestore: ^3.1.10
   
   
 
